--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="estilo.css">
 
     <!-- Favicon-->
-    <link rel="shortcut icon" href="assets/assets/icons8-perfil-96.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/assets/icons8-perfil-96.png" type="image/x-icon">
 
     <title>Lucas Rodrigues Cunha</title>
 </head>
@@ -22,7 +22,7 @@
 <body>
     <div id="contêiner">
         <div id="perfil">
-            <img src="assets/assets/avatar.png"
+            <img src="../assets/assets/avatar.png"
                 alt="Foto de Lucas Rodrigues sorrindo, usando óculos e camisa preta, barba e fundo verde">
             <p>@eu.lucasrodrigues3</p>
         </div>
