--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <div id="contêiner">
         <div id="perfil">
-            <img src="/assets/assets/avatar.png"
+            <img src="assets/assets/avatar.png"
                 alt="Foto de Lucas Rodrigues sorrindo, usando óculos e camisa preta, barba e fundo verde">
             <p>@eu.lucasrodrigues3</p>
         </div>
